rename back to prmApp, added deployment

--- a/.docker/frontend/Dockerfile
+++ b/.docker/frontend/Dockerfile
@@ -1,8 +1,10 @@
 FROM node:12
+LABEL org.opencontainers.image.source https://github.com/Thermidor/SmartPRM-ClinicModule
+
 WORKDIR /app
 
 # Copy application files
-COPY ./frontend /app
+COPY ./prmApp /app
 
 # Install
 RUN npm install
