--- a/api/package.json
+++ b/api/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/bbachi/vuejs-nginx-docker#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "http-proxy-middleware": "^1.0.4",
     "pg": "^8.5.1",
     "random-id": "^1.0.4"
