--- a/prmApp/package.json
+++ b/prmApp/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "bootstrap-icons": "^1.3.0",
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
     "lodash.orderby": "^4.6.0",
