--- a/prmApp/package.json
+++ b/prmApp/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.6.5",
     "lodash.orderby": "^4.6.0",
     "v-datatable-light": "^0.8.2",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-i18n": "^8.22.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
