--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.1",
     "get-env": "^0.5.10",
     "http-proxy-middleware": "^1.0.4",
+    "node-forge": "^0.10.0",
     "pg": "^8.5.1",
     "random-id": "^1.0.4",
     "utf8": "^3.0.0"
