--- a/api/package.json
+++ b/api/package.json
@@ -30,7 +30,8 @@
     "node-forge": "^0.10.0",
     "pg": "^8.5.1",
     "random-id": "^1.0.4",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "del": "^5.1.0",
