--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,17 @@ networks:
   smartprm:
 
 services:
+  smart_prm_api:
+    build:
+      context: .
+      dockerfile: .docker/api/Dockerfile
+    env_file: api/.env
+    restart: always
+    ports:
+      - ${HTTP_PORT:-3080}:3080
+    networks:
+      - smartprm
+
   smart_prm_frontend:
     build:
       context: .
@@ -15,6 +26,7 @@ services:
     ports:
       - ${HTTP_PORT:-8085}:80
     environment:
+      API_URL: smart_prm_api:3080
       VUE_APP_BASE_URL: http://localhost
     networks:
       - smartprm
