--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -13,10 +13,12 @@
     "@amcharts/amcharts4-geodata": "^4.1.9",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@fullcalendar/core": "^4.3.1",
-    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/daygrid": "^4.4.2",
     "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/resource-timegrid": "^4.4.1",
+    "@fullcalendar/resource-timeline": "^4.4.0",
     "@fullcalendar/timegrid": "^4.3.0",
-    "@fullcalendar/vue": "^4.3.1",
+    "@fullcalendar/vue": "^4.4.2",
     "animate.css": "^3.7.2",
     "apexcharts": "^3.10.1",
     "auth0-js": "^9.12.2",
@@ -50,6 +52,7 @@
     "vue-i18n": "^8.15.3",
     "vue-morris": "^1.1.0",
     "vue-property-decorator": "^8.3.0",
+    "vue-resource-timeline": "^1.0.4",
     "vue-router": "^3.1.3",
     "vue-select": "^3.4.0",
     "vue-slick": "^1.1.15",
@@ -62,6 +65,7 @@
   "devDependencies": {
     "@babel/polyfill": "^7.7.0",
     "@fullcalendar/list": "^4.3.0",
+    "@types/fullcalendar__vue": "^4.4.2",
     "@vue/cli-plugin-babel": "^4.5.11",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-pwa": "^4.1.2",
