--- a/.docker/app/nginx.conf
+++ b/.docker/app/nginx.conf
@@ -7,4 +7,15 @@ server {
             index  index.html;
             try_files $uri $uri/ /index.html;
         }
+
+        location ^~ /api/ {
+        proxy_set_header   X-Forwarded-For $remote_addr;
+        proxy_set_header   Host $http_host;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_pass         http://smartprm_api:3080;
+        }
 }
