--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -63,6 +63,7 @@ jobs:
           docker run --name smartprm_api -d \
           --restart always \
           --net emazing \
+          -e APP_URL="https://staging-prm.emazing.si" \
           -e POSTGRES_HOST=$POSTGRES_HOST \
           -e POSTGRES_PORT=$POSTGRES_PORT \
           -e POSTGRES_USER=$POSTGRES_USER \
@@ -89,7 +90,7 @@ jobs:
           docker run --name smartprm_app -d \
           --restart always \
           --net emazing \
-          -e API_URL="http://smartprm_api:3080" \
+          -e API_URL="https://staging-prm.emazing.si/api" \
           -l traefik.enable=true \
           -l traefik.http.services.smartprm_app.loadbalancer.server.port=80 \
           -l 'traefik.http.routers.smartprm_app.rule=Host("staging-prm.emazing.si")' \
