--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "node-forge": "^0.10.0",
     "pg": "^8.5.1",
     "random-id": "^1.0.4",
+    "slo-fiscal-verification": "git+https://github.com/Thermidor/Fiscal-verification-of-invoices-for-Slovenia.git",
     "utf8": "^3.0.0",
     "uuid": "^8.3.2"
   },
