added cache control to the nginx config

--- a/.docker/app/nginx.conf
+++ b/.docker/app/nginx.conf
@@ -6,6 +6,8 @@ server {
             root   /app;
             index  index.html;
             try_files $uri $uri/ /index.html;
+            expires 1h;
+            add_header Cache-Control "public";
         }
 
         location ^~ /api/ {
