created offer and invoice tables

--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,5 @@
-POSTGRES_HOST='localhost'
-POSTGRES_USER=postgres
+POSTGRES_HOST='136.243.204.82'
+POSTGRES_USER=emazing
 POSTGRES_DB=emazing
-POSTGRES_PASSWORD='15168'
-POSTGRES_PORT=5432
+POSTGRES_PASSWORD='XkRCDHZ6RpkqRTBe'
+POSTGRES_PORT=27032
