--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -43,6 +43,7 @@
     "ramda": "^0.26.1",
     "raphael": "latest",
     "register-service-worker": "^1.6.2",
+    "rollbar": "^2.21.1",
     "smooth-scrollbar": "^8.5.1",
     "swiper": "^5.3.0",
     "url-loader": "^3.0.0",
