--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -32,6 +32,7 @@
     "firebase": "^7.7.0",
     "highcharts": "^8.0.4",
     "highcharts-vue": "^1.3.5",
+    "html2pdf.js": "^0.9.3",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
     "lodash": "latest",
