--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -35,7 +35,7 @@
     "html2pdf.js": "^0.9.3",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
-    "lodash": "latest",
+    "lodash": "^4.17.21",
     "lottie-web": "^5.5.10",
     "moment": "^2.24.0",
     "node-snackbar": "^0.1.16",
