--- a/api/package.json
+++ b/api/package.json
@@ -20,11 +20,13 @@
   },
   "homepage": "https://github.com/bbachi/vuejs-nginx-docker#readme",
   "dependencies": {
+    "aws-sdk": "^2.902.0",
     "base64url": "^3.0.1",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
     "get-env": "^0.5.10",
     "http-proxy-middleware": "^1.0.4",
@@ -42,6 +44,8 @@
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-zip": "^5.0.1",
+    "chai": "^4.2.0",
+    "mocha": "^8.4.0",
     "nodemon": "^2.0.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
