--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -50,11 +50,14 @@ jobs:
           POSTGRES_DB: emazing
           POSTGRES_USER: emazing
           POSTGRES_PASSWORD: ${{ secrets.STAGING_DB_PASS }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}
+          AWS_BUCKET_NAME: ${{ secrets.STAGING_AWS_BUCKET_NAME }}
       with:
         host: ${{ secrets.STAGING_HOST }}
         username: root
         key: ${{ secrets.SSH_KEY }}
-        envs: GITHUB_USERNAME, DOCKER_TOKEN, POSTGRES_HOST, POSTGRES_PORT, POSTGRES_DB, POSTGRES_USER, POSTGRES_PASSWORD
+        envs: GITHUB_USERNAME, DOCKER_TOKEN, POSTGRES_HOST, POSTGRES_PORT, POSTGRES_DB, POSTGRES_USER, POSTGRES_PASSWORD, AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_BUCKET_NAME
         script: |
           docker login ghcr.io -u $GITHUB_USERNAME -p $DOCKER_TOKEN
           docker pull ghcr.io/thermidor/smartprm-api:staging
@@ -69,6 +72,9 @@ jobs:
           -e POSTGRES_USER=$POSTGRES_USER \
           -e POSTGRES_DB=$POSTGRES_DB \
           -e POSTGRES_PASSWORD=$POSTGRES_PASSWORD \
+          -e AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} \
+          -e AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} \
+          -e AWS_BUCKET_NAME=${AWS_BUCKET_NAME} \
           ghcr.io/thermidor/smartprm-api:staging
 
 
