--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -59,6 +59,7 @@
     "vue-router": "^3.1.3",
     "vue-select": "^3.4.0",
     "vue-slick": "^1.1.15",
+    "vue-slick-carousel": "^1.0.6",
     "vue-slider-component": "3.0.32",
     "vuedraggable": "^2.23.2",
     "vuefire": "^2.2.1",
