--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -41,6 +41,7 @@
     "node-snackbar": "^0.1.16",
     "novelcovid": "^1.0.7-b3",
     "postcss-loader": "^3.0.0",
+    "qrcode.vue": "^1.7.0",
     "ramda": "^0.26.1",
     "raphael": "latest",
     "register-service-worker": "^1.6.2",
