--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -24,6 +24,7 @@
     "auth0-js": "^9.12.2",
     "autoprefixer": "latest",
     "axios": "^0.19.2",
+    "bignumber.js": "^9.0.1",
     "bootstrap-vue": "^2.1.0",
     "cache-loader": "^4.1.0",
     "classnames": "2.2.6",
