--- a/api/.env
+++ b/api/.env
@@ -3,3 +3,7 @@ POSTGRES_USER=emazing
 POSTGRES_DB=emazing
 POSTGRES_PASSWORD='XkRCDHZ6RpkqRTBe'
 POSTGRES_PORT=27032
+
+AWS_ACCESS_KEY_ID=AKIAVZFMD5UJZZ6QM322
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET_NAME=smartprmstorage-dev
