--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -49,6 +49,7 @@
     "rollbar": "^2.21.1",
     "smooth-scrollbar": "^8.5.1",
     "swiper": "^5.3.0",
+    "tiff.js": "^1.0.0",
     "url-loader": "^3.0.0",
     "vee-validate": "^3.2.2",
     "vue": "^2.6.10",
