--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-brute": "^1.0.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
     "get-env": "^0.5.10",
