--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -65,6 +65,7 @@
     "vue-slick": "^1.1.15",
     "vue-slick-carousel": "^1.0.6",
     "vue-slider-component": "3.0.32",
+    "vue2-datepicker": "^3.9.1",
     "vuedraggable": "^2.23.2",
     "vuefire": "^2.2.1",
     "vuex": "^3.0.1",
