--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -53,6 +53,7 @@
     "url-loader": "^3.0.0",
     "vee-validate": "^3.2.2",
     "vue": "^2.6.10",
+    "vue-color": "^2.8.1",
     "vue-flatpickr-component": "^8.1.5",
     "vue-i18n": "^8.15.3",
     "vue-morris": "^1.1.0",
