--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -12,14 +12,13 @@
     "@amcharts/amcharts4": "^4.7.18",
     "@amcharts/amcharts4-geodata": "^4.1.9",
     "@fortawesome/fontawesome-free": "^5.11.2",
-    "@fullcalendar/core": "^5.9.0",
-    "@fullcalendar/daygrid": "^5.9.0",
-    "@fullcalendar/interaction": "^5.9.0",
-    "@fullcalendar/list": "^5.9.0",
-    "@fullcalendar/resource-timegrid": "^5.9.0",
-    "@fullcalendar/resource-timeline": "^5.9.0",
-    "@fullcalendar/timegrid": "^5.9.0",
-    "@fullcalendar/vue": "^5.9.0",
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.4.2",
+    "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/resource-timegrid": "^4.4.1",
+    "@fullcalendar/resource-timeline": "^4.4.0",
+    "@fullcalendar/timegrid": "^4.3.0",
+    "@fullcalendar/vue": "^4.4.2",
     "animate.css": "^3.7.2",
     "apexcharts": "^3.10.1",
     "auth0-js": "^9.12.2",
@@ -75,6 +74,8 @@
   },
   "devDependencies": {
     "@babel/polyfill": "^7.7.0",
+    "@fullcalendar/list": "^4.3.0",
+    "@types/fullcalendar__vue": "^4.4.2",
     "@vue/cli-plugin-babel": "^4.5.11",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-pwa": "^4.1.2",
