--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -12,13 +12,14 @@
     "@amcharts/amcharts4": "^4.10.22",
     "@amcharts/amcharts4-geodata": "^4.1.9",
     "@fortawesome/fontawesome-free": "^5.11.2",
-    "@fullcalendar/core": "^4.3.1",
-    "@fullcalendar/daygrid": "^4.4.2",
-    "@fullcalendar/interaction": "^4.3.0",
-    "@fullcalendar/resource-timegrid": "^4.4.1",
-    "@fullcalendar/resource-timeline": "^4.4.0",
-    "@fullcalendar/timegrid": "^4.3.0",
-    "@fullcalendar/vue": "^4.4.2",
+    "@fullcalendar/core": "^5.9.0",
+    "@fullcalendar/daygrid": "^5.9.0",
+    "@fullcalendar/interaction": "^5.9.0",
+    "@fullcalendar/list": "^5.9.0",
+    "@fullcalendar/resource-timegrid": "^5.9.0",
+    "@fullcalendar/resource-timeline": "^5.9.0",
+    "@fullcalendar/timegrid": "^5.9.0",
+    "@fullcalendar/vue": "^5.9.0",
     "animate.css": "^3.7.2",
     "apexcharts": "^3.10.1",
     "auth0-js": "^9.12.2",
@@ -30,6 +31,9 @@
     "classnames": "2.2.6",
     "core-js": "^3.3.2",
     "css-loader": "^3.2.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-standard": "^5.0.0",
     "firebase": "^7.7.0",
     "highcharts": "^8.0.4",
     "highcharts-vue": "^1.3.5",
@@ -74,8 +78,6 @@
   },
   "devDependencies": {
     "@babel/polyfill": "^7.7.0",
-    "@fullcalendar/list": "^4.3.0",
-    "@types/fullcalendar__vue": "^4.4.2",
     "@vue/cli-plugin-babel": "^4.5.11",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-pwa": "^4.1.2",
