--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -21,7 +21,7 @@
     "@fullcalendar/timegrid": "^5.9.0",
     "@fullcalendar/vue": "^5.9.0",
     "animate.css": "^3.7.2",
-    "apexcharts": "^3.10.1",
+    "apexcharts": "^3.30.0",
     "auth0-js": "^9.12.2",
     "autoprefixer": "latest",
     "axios": "^0.22.0",
@@ -57,6 +57,7 @@
     "url-loader": "^3.0.0",
     "vee-validate": "^3.2.2",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.6.2",
     "vue-color": "^2.8.1",
     "vue-flatpickr-component": "^8.1.5",
     "vue-i18n": "^8.15.3",
