--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/bbachi/vuejs-nginx-docker#readme",
   "dependencies": {
+    "@vonage/server-sdk": "^2.10.10",
     "aws-sdk": "^2.902.0",
     "base64url": "^3.0.1",
     "bcrypt": "^5.0.0",
