--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -53,11 +53,13 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}
           AWS_BUCKET_NAME: ${{ secrets.STAGING_AWS_BUCKET_NAME }}
+          VONAGE_API_KEY: ${{ secrets.STAGING_VONAGE_API_KEY }}
+          VONAGE_API_SECRET: ${{ secrets.STAGING_VONAGE_API_SECRET }}
       with:
         host: ${{ secrets.STAGING_HOST }}
         username: root
         key: ${{ secrets.SSH_KEY }}
-        envs: GITHUB_USERNAME, DOCKER_TOKEN, POSTGRES_HOST, POSTGRES_PORT, POSTGRES_DB, POSTGRES_USER, POSTGRES_PASSWORD, AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_BUCKET_NAME
+        envs: GITHUB_USERNAME, DOCKER_TOKEN, POSTGRES_HOST, POSTGRES_PORT, POSTGRES_DB, POSTGRES_USER, POSTGRES_PASSWORD, AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_BUCKET_NAME, VONAGE_API_KEY, VONAGE_API_SECRET
         script: |
           docker login ghcr.io -u $GITHUB_USERNAME -p $DOCKER_TOKEN
           docker pull ghcr.io/thermidor/smartprm-api:staging
@@ -75,6 +77,8 @@ jobs:
           -e AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} \
           -e AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} \
           -e AWS_BUCKET_NAME=${AWS_BUCKET_NAME} \
+          -e VONAGE_API_KEY=${VONAGE_API_KEY} \
+          -e VONAGE_API_SECRET=${VONAGE_API_SECRET} \
           ghcr.io/thermidor/smartprm-api:staging
 
 
