--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "http-proxy-middleware": "^1.0.4",
     "module-alias": "^2.2.2",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "node-forge": "^0.10.0",
     "pg": "^8.5.1",
     "random-id": "^1.0.4",
