--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -65,6 +65,7 @@
     "vue-morris": "^1.1.0",
     "vue-multiselect": "^2.1.6",
     "vue-numeral-filter": "^2.0.0",
+    "vue-phone-number-input": "^1.1.12",
     "vue-property-decorator": "^8.3.0",
     "vue-resource-timeline": "^1.0.4",
     "vue-router": "^3.1.3",
