--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
     "geoip-lite": "^1.4.2",
     "get-env": "^0.5.10",
     "http-proxy-middleware": "^1.0.4",
+    "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
