--- a/SmartPRM-ClinicModule/package.json
+++ b/SmartPRM-ClinicModule/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "firebase": "^7.7.0",
+    "floating-vue": "^1.0.0-beta.5",
     "highcharts": "^8.0.4",
     "highcharts-vue": "^1.3.5",
     "html2pdf.js": "^0.10.1",
